crates/pardosa-schema/tests/compile_fail/ref_hashset.stderr
error: EVT-014: GenomeSafe: Map- and set-shaped event payloads are forbidden by Solon doctrine (map- and set-shaped payloads are non-canonical): enumerate keys as named struct fields or an enum, or store the map outside the event store.
 --> tests/compile_fail/ref_hashset.rs:5:20
  |
5 |     data: &'static HashSet<String>,
  |                    ^^^^^^^^^^^^^^^
